--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0" />
-    <title>mbsr</title>
-</head>
-
-<body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0"><title>mbsr</title><link href=./static/css/app.d140372d7ad6654310c760567a581778.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.eeec6b469bf0e4863dd3.js></script><script type=text/javascript src=./static/js/vendor.b81ddf60cc68eb41694e.js></script><script type=text/javascript src=./static/js/app.97b5cc2b0ff0201d4792.js></script></body></html>
